[gd_scene load_steps=2 format=3 uid="uid://d4iqr17q1x8bm"]

[ext_resource type="Script" uid="uid://dx2a2vo4t8oce" path="res://scripts/game_over.gd" id="1_40baj"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_40baj")
metadata/_edit_use_anchors_ = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Game Over"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 1

[node name="KillsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Kills: 0"
horizontal_alignment = 1

[node name="ButtonsContainer2" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MenuButton" type="Button" parent="VBoxContainer/ButtonsContainer2"]
custom_minimum_size = Vector2(190, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
text = "Menu"

[node name="RestartButton" type="Button" parent="VBoxContainer/ButtonsContainer2"]
custom_minimum_size = Vector2(190, 50)
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 24
text = "Restart"

[connection signal="pressed" from="VBoxContainer/ButtonsContainer2/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer2/RestartButton" to="." method="_on_restart_button_pressed"]
